--- a/src/components/Overlay.css
+++ b/src/components/Overlay.css
@@ -18,7 +18,7 @@
 .overlay .overlay-content {
     position: relative;
     overflow-y: auto;
-    height: 50dvh;
+    max-height: 50dvh;
     border-radius: 6px;
 }
 
