--- a/src/components/UpdateBoardModal.css
+++ b/src/components/UpdateBoardModal.css
@@ -1,6 +1,7 @@
 .update-board {
     background: #FFFFFF;
     width: 480px;
+    height: fit-content;
     padding: 32px;
 }
 
